@@ -49,6 +49,12 @@ public class UrlConnectTest {
     }
 
     @Test
+    public void ignoresContentTypeIfSoConfigured() throws IOException {
+        Document doc = Jsoup.connect("http://jsoup.org/rez/osi_logo.png").ignoreContentType(true).get();
+        assertEquals("", doc.title()); // this will cause an ugly parse tree
+    }
+
+    @Test
     public void doesPost() throws IOException {
         Document doc = Jsoup.connect(echoURL)
             .data("uname", "Jsoup", "uname", "Jonathan", "百", "度一下")
@@ -56,7 +62,7 @@ public class UrlConnectTest {
             .post();
 
         assertEquals("POST", ihVal("REQUEST_METHOD", doc));
-        assertEquals("gzip", ihVal("HTTP_ACCEPT_ENCODING", doc));
+        //assertEquals("gzip", ihVal("HTTP_ACCEPT_ENCODING", doc)); // current proxy removes gzip on post
         assertEquals("auth=token", ihVal("HTTP_COOKIE", doc));
         assertEquals("度一下", ihVal("百", doc));
         assertEquals("Jsoup, Jonathan", ihVal("uname", doc));
@@ -115,10 +121,20 @@ public class UrlConnectTest {
     }
 
     @Test
+    public void ignoresExceptionIfSoConfigured() throws IOException {
+        Connection con = Jsoup.connect("http://infohound.net/tools/404").ignoreHttpErrors(true);
+        Connection.Response res = con.execute();
+        Document doc = res.parse();
+        assertEquals(404, res.statusCode());
+        assertEquals("Not Found", doc.select("h1").first().text());
+    }
+
+    @Test
     public void doesntRedirectIfSoConfigured() throws IOException {
         Connection con = Jsoup.connect("http://infohound.net/tools/302.pl").followRedirects(false);
         Connection.Response res = con.execute();
-        assert(res.statusCode() == 302);
+        assertEquals(302, res.statusCode());
+        assertEquals("http://jsoup.org", res.header("Location"));
     }
 
     @Test
@@ -141,5 +157,4 @@ public class UrlConnectTest {
         }
         assertTrue(threw);
     }
-
 }
